<resources>

    <string name="app_name">百人一首クイズ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">設定</string>
    <string name="random">ランダム</string>
    <string name="order">順番</string>
    <string name="start">スタート</string>
    <string name="wavedash">~</string>
    <string name="twentyfive">25首</string>
    <string name="fifty">50首</string>
    <string name="hundred">100首</string>
    <string name="choose">Choose!</string>
    <string name="onetotwfive">1首～25首</string>
    <string name="twsixtofifty">26首～50首</string>
    <string name="fifonetosevfive">51首～75首</string>
    <string name="sevsixtohund">76首～100首</string>
    <string name="cancel">中断</string>
    <string name="desc">選択肢を入れる</string>
    <string name="ansewer">答えを見る</string>
    <string name="result">結果</string>
    <string name="titleback">最初に戻る</string>
    <string name="again">もう一度</string>
    <string name="nexts">画面をタップすると次の問題です。</string>
    <string name="kami1">秋の田のかりほの庵の苫をあらみ</string>
    <string name="kami2">春過ぎて夏来にけらし白妙の</string>
    <string name="kami3">あしびきの山鳥の尾のしだり尾の</string>
    <string name="kami4">田子の浦にうち出でて見れば白妙の</string>
    <string name="kami5">奥山に紅葉踏み分け鳴く鹿の</string>
    <string name="kami6">鵲の渡せる橋に置く霜の</string>
    <string name="kami7">天の原ふりさけ見れば春日なる</string>
    <string name="kami8">わが庵は都の辰巳しかぞ住む</string>
    <string name="kami9">花の色は移りにけりないたづらに</string>
    <string name="kami10">これやこの行くも帰るも別れては</string>
    <string name="kami11">わたの原八十島かけて漕ぎ出でぬと</string>
    <string name="kami12">天つ風雲の通ひ路吹きとぢよ</string>
    <string name="kami13">筑波嶺の峰より落つるみなの川</string>
    <string name="kami14">陸奥のしのぶもぢずりたれゆえに</string>
    <string name="kami15">君がため春の野に出でて若菜摘む</string>
    <string name="kami16">立ち別れいなばの山の峰に生ふる</string>
    <string name="kami17">ちはやぶる神代も聞かず竜田川</string>
    <string name="kami18">住の江の岸に寄る波よるさへや</string>
    <string name="kami19">難波潟短き蘆のふしの間も</string>
    <string name="kami20">わびぬれば今はたおなじ難波なる</string>
    <string name="kami21">今来むといひしばかりに長月の</string>
    <string name="kami22">吹くからに秋の草木のしをるれば</string>
    <string name="kami23">月見ればちぢにものこそ悲しけれ</string>
    <string name="kami24">このたびは幣も取りあへず手向山</string>
    <string name="kami25">名にし負はば逢う坂山のさねかずら</string>
    <string name="kami26">小倉山峰の紅葉葉心あらば</string>
    <string name="kami27">みかの原わきて流るるいづみ川</string>
    <string name="kami28">山里は冬ぞ寂しさまさりける</string>
    <string name="kami29">心あてに折らばや折らむ初霜の</string>
    <string name="kami30">有明のつれなく見えし別れより</string>
    <string name="kami31">朝ぼらけ有明の月と見るまでに</string>
    <string name="kami32">山川に風のかけたるしがらみは</string>
    <string name="kami33">ひさかたの光のどけき春の日に</string>
    <string name="kami34">誰をかも知る人にせむ高砂の</string>
    <string name="kami35">人はいさ心も知らずふるさとは</string>
    <string name="kami36">夏の夜はまだ宵ながら明けぬるを</string>
    <string name="kami37">白露に風の吹きしく秋の野は</string>
    <string name="kami38">忘らるる身をば思はず誓ひてし</string>
    <string name="kami39">浅茅生の小野の篠原忍ぶれど</string>
    <string name="kami40">忍ぶれど色に出でにけりわが恋は</string>
    <string name="kami41">恋すてふわが名はまだき立ちにけり</string>
    <string name="kami42">契りきなかたみに袖をしぼりつつ</string>
    <string name="kami43">逢ひ見てののちの心にくらぶれば</string>
    <string name="kami44">逢ふことの絶えてしなくはなかなかに</string>
    <string name="kami45">あはれともいふべき人は思ほえで</string>
    <string name="kami46">由良の門を渡る舟人かぢを絶え</string>
    <string name="kami47">八重むぐら茂れる宿の寂しきに</string>
    <string name="kami48">風をいたみ岩打つ波のおのれのみ</string>
    <string name="kami49">御垣守衛士のたく火の夜は燃え</string>
    <string name="kami50">君がため惜しからざりし命さへ</string>
    <string name="kami51">かくとだにえやは伊吹のさしも草</string>
    <string name="kami52">明けぬれば暮るるものとは知りながら</string>
    <string name="kami53">嘆きつつひとり寝る夜の明くる間は</string>
    <string name="kami54">忘れじのゆく末まではかたければ</string>
    <string name="kami55">滝の音は絶えて久しくなりぬれど</string>
    <string name="kami56">あらざらむこの世のほかの思ひ出に</string>
    <string name="kami57">めぐり逢ひて見しやそれとも分かぬ間に</string>
    <string name="kami58">有馬山猪名の篠原風吹けば</string>
    <string name="kami59">やすらはで寝なましものをさ夜更けて</string>
    <string name="kami60">大江山いく野の道の遠ければ</string>
    <string name="kami61">いにしへの奈良の都の八重桜</string>
    <string name="kami62">夜をこめて鳥のそら音ははかるとも</string>
    <string name="kami63">今はただ思ひ絶えなむとばかりを</string>
    <string name="kami64">朝ぼらけ宇治の川霧たえだえに</string>
    <string name="kami65">恨みわび干さぬ袖だにあるものを</string>
    <string name="kami66">もろともにあはれと思え山桜</string>
    <string name="kami67">春の夜の夢ばかりなる手枕に</string>
    <string name="kami68">心にもあらで憂き夜に長らへば</string>
    <string name="kami69">嵐吹く三室の山のもみぢ葉は</string>
    <string name="kami70">寂しさに宿を立ち出でてながむれば</string>
    <string name="kami71">夕されば門田の稲葉訪れて</string>
    <string name="kami72">音に聞く高師の浜のあだ波は</string>
    <string name="kami73">高砂の尾の上の桜咲きにけり</string>
    <string name="kami74">憂かりける人を初瀬の山おろしよ</string>
    <string name="kami75">契りおきしさせもが露を命にて</string>
    <string name="kami76">わたの原漕ぎ出でて見ればひさかたの</string>
    <string name="kami77">瀬をはやみ岩にせかるる滝川の</string>
    <string name="kami78">淡路島通ふ千鳥の鳴く声に</string>
    <string name="kami79">秋風にたなびく雲のたえ間より</string>
    <string name="kami80">ながからむ心も知らず黒髪の</string>
    <string name="kami81">ほととぎす鳴きつる方をながむれば</string>
    <string name="kami82">思ひわびさても命はあるものを</string>
    <string name="kami83">世の中よ道こそなけれ思ひ入る</string>
    <string name="kami84">長らへばまたこのごろやしのばれむ</string>
    <string name="kami85">夜もすがらもの思ふころは明けやらぬ</string>
    <string name="kami86">嘆けとて月やはものを思はする</string>
    <string name="kami87">村雨の露もまだ干ぬまきの葉に</string>
    <string name="kami88">難波江の蘆のかりねのひとよゆゑ</string>
    <string name="kami89">玉の緒よ絶えなば絶えねながらへば</string>
    <string name="kami90">見せばやな雄島の海人の袖だにも</string>
    <string name="kami91">きりぎりす鳴くや霜夜のさむしろに</string>
    <string name="kami92">わが袖は潮干に見えぬ沖の石の</string>
    <string name="kami93">世の中は常にもがもな渚漕ぐ</string>
    <string name="kami94">み吉野の山の秋風さよ更けて</string>
    <string name="kami95">おほけなく憂き世の民におほふかな</string>
    <string name="kami96">花さそふ嵐の庭の雪ならで</string>
    <string name="kami97">来ぬ人を松帆の浦の夕なぎに</string>
    <string name="kami98">風そよぐ楢の小川の夕暮は</string>
    <string name="kami99">人も愛し人も恨めしあじきなく</string>
    <string name="kami100">百敷や古き軒端のしのぶにも</string>
    <string name="shimo1">わが衣手は梅雨にぬれつつ</string>
    <string name="shimo2">衣ほすてふ天の香具山</string>
    <string name="shimo3">ながながし夜をひとりかもねむ</string>
    <string name="shimo4">富士の高嶺に雪はふりつつ</string>
    <string name="shimo5">声きくときぞ秋はかなしき</string>
    <string name="shimo6">白きを見れば夜ぞふけにける</string>
    <string name="shimo7">三笠の山にいでし月かも</string>
    <string name="shimo8">世をうぢ山と人はいふなり</string>
    <string name="shimo9">わが身よにふるながめせしまに</string>
    <string name="shimo10">知るもしらぬもあふ坂の関</string>
    <string name="shimo11">人には告げよあまのつり船</string>
    <string name="shimo12">乙女のすがたしばしとどめむ</string>
    <string name="shimo13">恋ぞつもりて淵となりぬる</string>
    <string name="shimo14">乱れそめにしわれならなくに</string>
    <string name="shimo15">わが衣手に雪はふりつつ</string>
    <string name="shimo16">まつとしきかばいま帰り来む</string>
    <string name="shimo17">からくれなゐに水くくるとは</string>
    <string name="shimo18">夢のかよひ路人めよくらむ</string>
    <string name="shimo19">あはでこの世をすぐしてよとや</string>
    <string name="shimo20">みをつくしてもあはむとぞ思ふ</string>
    <string name="shimo21">あり明の月を待出つるかな</string>
    <string name="shimo22">むべ山風をあらしというらむ</string>
    <string name="shimo23">わが身ひとつの秋にはあらねど</string>
    <string name="shimo24">もみぢのにしき神のまにまに</string>
    <string name="shimo25">人に知られで来るよしもがな</string>
    <string name="shimo26">いまひとたびのみゆきまたなむ</string>
    <string name="shimo27">いつみきとてか恋しかるらむ</string>
    <string name="shimo28">人めも草もかれぬと思へば</string>
    <string name="shimo29">置きまどわせる白菊の花</string>
    <string name="shimo30">あかつきばかりうきものはなし</string>
    <string name="shimo31">吉野の里にふれる白雪</string>
    <string name="shimo32">ながれもあへぬもみぢなりけり</string>
    <string name="shimo33">しづ心なく花のちるらむ</string>
    <string name="shimo34">松もむかしの友ならなくに</string>
    <string name="shimo35">花ぞむかしの香ににほひける</string>
    <string name="shimo36">雲のいづこに月やどるらむ</string>
    <string name="shimo37">つらぬきとめぬ玉ぞ散りける</string>
    <string name="shimo38">人の命の惜しくもあるかな</string>
    <string name="shimo39">あまりてなどか人の恋しき</string>
    <string name="shimo40">物や思ふと人のとふまで</string>
    <string name="shimo41">ひとしれずこそおもひそめしか</string>
    <string name="shimo42">末のまつ山波こさじとは</string>
    <string name="shimo43">昔は物を思はざりけり</string>
    <string name="shimo44">人をも身をも恨みざらまし</string>
    <string name="shimo45">身のいたづらになりぬべきかな</string>
    <string name="shimo46">ゆくへも知らぬ恋の道かな</string>
    <string name="shimo47">人こそ見えね秋はきにけり</string>
    <string name="shimo48">くだけてものを思ふころかな</string>
    <string name="shimo49">ひるは消えつつ物をこそ思へ</string>
    <string name="shimo50">ながくもがなと思ひけるかな</string>
    <string name="shimo51">さしもしらじなもゆる思ひを</string>
    <string name="shimo52">なほうらめしき朝ぼらけかな</string>
    <string name="shimo53">いかに久しきものとかはしる</string>
    <string name="shimo54">今日を限りの命ともがな</string>
    <string name="shimo55">名こそながれてなほ聞えけれ</string>
    <string name="shimo56">いまひとたびのあふこともがな</string>
    <string name="shimo57">雲がくれにし夜半の月かな</string>
    <string name="shimo58">いでそよ人を忘れやはする</string>
    <string name="shimo59">かたぶくまでの月をみしかな</string>
    <string name="shimo60">まだふみもみず天の橋立</string>
    <string name="shimo61">けふ九重ににほひぬるかな</string>
    <string name="shimo62">よに逢坂の関はゆるさじ</string>
    <string name="shimo63">人づてならでいふよしもがな</string>
    <string name="shimo64">あらはれわたる瀬々の網代木</string>
    <string name="shimo65">恋にくちなむ名こそをしけれ</string>
    <string name="shimo66">花よりほかにしる人もなし</string>
    <string name="shimo67">かひなくたたむ名こそをしけれ</string>
    <string name="shimo68">恋しかるべき夜半の月かな</string>
    <string name="shimo69">竜田の川の錦なりけり</string>
    <string name="shimo70">いづこもおなじ秋の夕暮</string>
    <string name="shimo71">芦のまろやに秋風ぞ吹く</string>
    <string name="shimo72">かけじや袖のぬれもこそすれ</string>
    <string name="shimo73">とやまのかすみたたずもあらなむ</string>
    <string name="shimo74">はげしかれとは祈らぬものを</string>
    <string name="shimo75">あはれことしの秋もいぬめり</string>
    <string name="shimo76">雲居にまがふ沖つ波</string>
    <string name="shimo77">われても末に逢はむとぞ思ふ</string>
    <string name="shimo78">幾夜ねざめぬ須磨の関守</string>
    <string name="shimo79">もれいづる月の影のさやけさ</string>
    <string name="shimo80">みだれてけさは物をこそ思へ</string>
    <string name="shimo81">ただ有明の月ぞのこれる</string>
    <string name="shimo82">憂きにたへぬは涙なりけり</string>
    <string name="shimo83">山の奥にも鹿ぞ鳴くなる</string>
    <string name="shimo84">憂しとみし世ぞ今は恋しき</string>
    <string name="shimo85">閨のひまさへつれなかりけり</string>
    <string name="shimo86">かこち顔なるわが涙かな</string>
    <string name="shimo87">霧たちのぼる秋の夕ぐれ</string>
    <string name="shimo88">みをつくしてや恋ひわたるべき</string>
    <string name="shimo89">忍ることの弱りもぞする</string>
    <string name="shimo90">ぬれにぞぬれし色はかはらず</string>
    <string name="shimo91">ころもかたしきひとりかもねむ</string>
    <string name="shimo92">人こそしらねかわくまもなし</string>
    <string name="shimo93">海人の小舟の綱手かなしも</string>
    <string name="shimo94">ふるさと寒く衣うつなり</string>
    <string name="shimo95">わが立つ杣に墨染の袖</string>
    <string name="shimo96">ふりゆくものはわが身なりけり</string>
    <string name="shimo97">焼くや藻塩の身もこがれつつ</string>
    <string name="shimo98">みそぎぞ夏のしるしなりける</string>
    <string name="shimo99">世をおもふゆゑにもの思ふ身は</string>
    <string name="shimo100">なほあまりある昔なりけり</string>

    <string-array name="modelist">
        <item>スパルタモード</item>
        <item>反復モード</item>
        <item>モードなし</item>
    </string-array>
    <string-array name="modevalue">
        <item>hardcore</item>
        <item>repeat</item>
        <item>none</item>
    </string-array>

</resources>