<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/one2twf"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:onClick="onClick"
        android:text="@string/onetotwfive" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/choose"
        android:textSize="50sp" />

    <Button
        android:id="@+id/fifo2sevfive"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/one2twf"
        android:layout_below="@+id/one2twf"
        android:layout_marginTop="55dp"
        android:onClick="onClick"
        android:text="@string/fifonetosevfive" />

    <Button
        android:id="@+id/twsix2fifty"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/one2twf"
        android:layout_alignBottom="@+id/one2twf"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:onClick="onClick"
        android:text="@string/twsixtofifty" />

    <Button
        android:id="@+id/sevsix2hund"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/fifo2sevfive"
        android:layout_alignBottom="@+id/fifo2sevfive"
        android:layout_alignLeft="@+id/twsix2fifty"
        android:onClick="onClick"
        android:text="@string/sevsixtohund" />

</RelativeLayout>
