<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/fifty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:onClick="onClick"
        android:text="@string/fifty" />

    <TextView
        android:id="@+id/kaminoku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/choose"
        android:textSize="50sp" />

    <Button
        android:id="@+id/twfive"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fifty"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:onClick="onClick"
        android:text="@string/twentyfive" />

    <Button
        android:id="@+id/hundred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fifty"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="@string/hundred" />

</RelativeLayout>
